# ai-agents

./: README.md  docker-compose.yml  pyproject.toml
docker/: local.Dockerfile
evals/: eval_agent.py
src/: deps.py  main.py  settings.py  tools.py
src/routes/: agents.py  evals.py
